refactor: chart location base system field